--- a/app/views/account/login.html.erb
+++ b/app/views/account/login.html.erb
@@ -14,7 +14,10 @@
 <% if Setting.openid? %>
 <tr>
   <td align="right"><label for="openid_url"><%=l(:field_identity_url)%></label></td>
-  <td align="left"><%= text_field_tag "openid_url", nil, :tabindex => '3' %></td>
+  <td align="left">
+    <%= text_field_tag 'openid_url', nil, :tabindex => '3' %>
+    <%= select_tag :openid_url_select, options_for_select(OpenIdProvider.all.collect {|p| [p.name, p.url]}), { :tabindex => '4', :prompt => l(:field_identity_url) } %>
+  </td>
 </tr>
 <% end %>
 <tr>
@@ -44,4 +47,7 @@
 <%= javascript_tag "$('#password').focus();" %>
 <% else %>
 <%= javascript_tag "$('#username').focus();" %>
+<% end %>
+<% if Setting.openid? %>
+<%= javascript_tag "$('#openid_url_select').change(function() { $('#openid_url').val ($('#openid_url_select').val());});" %>
 <% end %>
